tests/machine/x/cpp/string_contains.mochi.error
line 14: ../../../tests/machine/x/cpp/string_contains.mochi.cpp: In function ‘int main()’:
../../../tests/machine/x/cpp/string_contains.mochi.cpp:14:13: error: request for member ‘contains’ in ‘s’, which is of non-class type ‘const char*’
   14 |     print(s.contains("cat"));
      |             ^~~~~~~~
../../../tests/machine/x/cpp/string_contains.mochi.cpp:15:13: error: request for member ‘contains’ in ‘s’, which is of non-class type ‘const char*’
   15 |     print(s.contains("dog"));
      |             ^~~~~~~~

 13 |     auto s = "catch";
 14 |     print(s.contains("cat"));
 15 |     print(s.contains("dog"));
